--- a/package.json
+++ b/package.json
@@ -9,6 +9,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.0.3"
+    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/tailwind": "^5.1.3",
+    "astro": "^5.0.3",
+    "astro-icon": "^1.1.4",
+    "sharp": "^0.33.5",
+    "tailwindcss": "^3.4.16"
+  },
+  "devDependencies": {
+    "@iconify-json/fa6-brands": "^1.2.0",
+    "@iconify-json/fa6-solid": "^1.2.0"
   }
 }
